<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<com.tianyu.share.ui.CustomTitleBar
    android:id="@+id/login_title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:leftImage="@mipmap/ic_launcher"
    app:middleTitle="@string/text_logins"
    app:middleTextColor="@color/colorAccent"
    app:middleTextSize="18sp" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:orientation="horizontal">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_launcher"
           android:layout_gravity="center"
           android:scaleType="center"/>

       <EditText
           android:id="@+id/edt_user_name"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:hint="@string/input_user_name"
           android:textSize="16sp"
           android:textColor="@color/black"
           android:layout_gravity="center"
           />

   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:orientation="horizontal">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_launcher"
           android:layout_gravity="center"
           android:scaleType="center"/>

       <EditText
           android:id="@+id/edt_user_pass"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:hint="@string/input_user_pass"
           android:textSize="16sp"
           android:inputType="textPassword"
           android:textColor="@color/black"
           android:layout_gravity="center"
           />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/ckb_forget"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_rememer_pass"
            />

        <TextView
            android:id="@+id/txt_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_forget_pass"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/text_logins"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/btn_bg_color"
        android:textSize="18sp"
        android:layout_margin="10dp" />
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/text_no_register"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_register"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>

