<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tianyu.share.ui.CustomTitleBar
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:leftImage="@mipmap/ic_launcher"
        app:middleTitle="@string/text_registers"
        app:middleTextColor="@color/colorAccent"
        app:middleTextSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:scaleType="center"/>

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:scaleType="center"/>

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:scaleType="center"/>

        <EditText
            android:id="@+id/edt_phone_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_code"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_bg_color"
            android:textSize="18sp"
            android:layout_margin="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:scaleType="center"/>

        <EditText
            android:id="@+id/edt_nick_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_nick_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:scaleType="center"/>

        <EditText
            android:id="@+id/edt_register_pass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_user_pass"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:scaleType="center"/>

        <EditText
            android:id="@+id/edt_agent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input_agent"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:text="@string/text_registers"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/btn_bg_color"
        android:textSize="18sp"
        android:layout_margin="10dp" />


</LinearLayout>
